ヘッダー作成

--- a/index.html
+++ b/index.html
@@ -6,5 +6,38 @@
     <link rel="stylesheet" href="sass/style.css" />
     <title>模写練習</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <h1 class="header__title">
+        <a href="#" class="header__titleLink">
+          <img
+            class="header__logo"
+            src="public/image/logo-r.svg"
+            alt="BBB英会話スクール"
+            width="100"
+          />
+        </a>
+      </h1>
+      <div class="header__hamburger">
+        <span class="header__hamburgerLine"></span>
+        <span class="header__hamburgerLine"></span>
+        <span class="header__hamburgerLine"></span>
+      </div>
+      <nav>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div
+        class="mainVisual"
+        style="height: 700px; background-color: pink"
+      ></div>
+    </main>
+
+    <script></script>
+  </body>
 </html>
